# rust-jar-bootstrapper

./: .gitignore  Cargo.toml  README.md
config/: bootable.json  instructions.json
docker/: Dockerfile  docker-compose.yml
src/: aws_download.rs  boot_instruction.rs  bootable.rs  command_service.rs  credentials.rs  file_service.rs  instructions.rs  main.rs  module_service.rs  run_jar.rs  s3_bucket_service.rs
